resolved bckfc visibility error

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1144,6 +1144,7 @@ input, select, textarea {
 		-webkit-transform: scale(1.0);
 		-ms-transform: scale(1.0);
 		transform: scale(1.0);
+		backface-visibility: hidden;
 		-webkit-backface-visibility: hidden;
 		position: fixed;
 		top: 0;
